feat: PayPal functionality
Note: User can see the result of the transaction. After that he can return to the home page of the first app and continue shopping,